bug: fixed chrome white-space: nowrap issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -169,6 +169,7 @@ time {
   font-family: "Baskerville";
   font-size: 75%;
   font-weight: normal;
+  white-space: nowrap;
 }
 
 /* extra styling points! */
